<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_background_dark_pink"
    android:padding="16dp"
    android:id="@+id/main"
    android:layout_marginBottom="12dp">

    <ImageView
        android:id="@+id/doctor_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_person"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/consultant_name" />

    <LinearLayout
        android:id="@+id/consultant_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/doctor_image"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/consultant_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultant_id"
            android:textColor="#555"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/consultant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultant_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/consultant_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultant_role"
            android:textColor="#333"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/consultant_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultant_email"
            android:textColor="#0000"
            android:textSize="14sp"
            android:autoLink="email"
            android:textColorLink="#000"
            />
    </LinearLayout>

</RelativeLayout>

