<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_curved_pink_card"
    android:padding="24dp">

    <ImageView
        android:id="@+id/album_art"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_album_art_placeholder"
        android:contentDescription="@string/album_art"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/album_art"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/song_1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/song_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/song_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/duration_3min"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

</RelativeLayout>

